--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -9,4 +9,8 @@
     android:layout_height="wrap_content" 
     android:text="@string/hello"
     />
+<TextView android:layout_width="wrap_content"
+	android:id="@+id/slavonic"
+	android:layout_height="wrap_content"
+	android:text="Проверка ЦС текста"></TextView>
 </LinearLayout>
